--- a/ResLifeToolkit/app/src/main/res/layout/main_screen.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/main_screen.xml
@@ -17,7 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/dlBTN"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:onClick="dutyLogs" />
 
     <Button
         android:text="Interaction Journals"
