--- a/ResLifeToolkit/app/src/main/res/layout/duty_log.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/duty_log.xml
@@ -20,15 +20,15 @@
             android:text="8PM ROunds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/8roundBTN"
+            android:id="@+id/eightRoundBTN"
             android:layout_weight="1" />
 
         <Button
             android:text="10PM Rounds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/10roundBTN"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:id="@+id/tenRoundBTN" />
     </LinearLayout>
 
     <LinearLayout
@@ -41,13 +41,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/12roundBTN" />
+            android:id="@+id/twelveRoundBTN" />
 
         <Button
             android:text="2AM Rounds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/2roundBTN"
+            android:id="@+id/twoRoundBTN"
             android:layout_weight="1" />
     </LinearLayout>
 
