--- a/ResLifeToolkit/app/src/main/res/layout/programming_list_item.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/programming_list_item.xml
@@ -4,22 +4,42 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/formTypeTV"
+        android:id="@+id/formTitleTV"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:paddingLeft="14dp"
-        android:text="Type"
+        android:gravity="center"
+        android:text="Name"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/formDateTV"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:padding="10dp"
-        android:text="Date"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/formTypeTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Type"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/formDateTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Date"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
 </LinearLayout>
