--- a/ResLifeToolkit/app/src/main/res/layout/programming_form.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/programming_form.xml
@@ -157,11 +157,10 @@
     </LinearLayout>
 
     <TextView
-        android:text="Did you meet your goals?"
+        android:id="@+id/goalsTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView9"
-        android:layout_weight="1" />
+        android:text="Did you meet your goals?" />
 
     <EditText
         android:id="@+id/goalsET"
@@ -169,5 +168,35 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textMultiLine" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/pfSaveBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="formSave"
+            android:text="Save" />
+
+        <Button
+            android:id="@+id/pfCancelBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="formCancel"
+            android:text="Cancel" />
+
+        <Button
+            android:id="@+id/pfDeleteBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="formDelete"
+            android:text="Delete" />
+    </LinearLayout>
 
 </LinearLayout>
