--- a/ResLifeToolkit/app/src/main/res/layout/programming_form.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/programming_form.xml
@@ -41,31 +41,46 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <TextView
-            android:text="Event"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/eventTV"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/eventTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Event"
+                android:textAlignment="textEnd" />
+
+            <Switch
+                android:id="@+id/formSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0" />
+
+            <TextView
+                android:id="@+id/passiveTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Passive"
+                android:textAlignment="textStart" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/eventDateET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAlignment="textEnd" />
+            android:ems="10"
+            android:inputType="date" />
 
-        <Switch
-            android:id="@+id/formSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0" />
-
-        <TextView
-            android:text="Passive"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/passiveTV"
-            android:layout_weight="1"
-            android:textAlignment="textStart" />
     </LinearLayout>
 
     <LinearLayout
@@ -181,6 +196,14 @@
             android:layout_weight="1"
             android:onClick="formSave"
             android:text="Save" />
+
+        <Button
+            android:id="@+id/pfSendBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="formSend"
+            android:text="Send" />
 
         <Button
             android:id="@+id/pfCancelBTN"
