--- a/ResLifeToolkit/app/src/main/res/layout/duty_log_list_item.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/duty_log_list_item.xml
@@ -25,6 +25,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical|center_horizontal"
-            android:text="fullDate" />
+            android:text="fullDate"
+            android:textColor="#000000" />
     </LinearLayout>
 </LinearLayout>
