--- a/ResLifeToolkit/app/src/main/res/layout/doc_wo_list_item.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/doc_wo_list_item.xml
@@ -27,7 +27,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical|center_horizontal"
-            android:text="Time" />
+            android:text="Time"
+            android:textColor="#000000" />
     </LinearLayout>
 
 </LinearLayout>
