Changed all input to strings.

--- a/ResLifeToolkit/app/src/main/res/layout/programming_form.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/programming_form.xml
@@ -177,7 +177,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="Cost"
-            android:inputType="textPersonName" />
+            android:inputType="numberDecimal" />
 
         <EditText
             android:id="@+id/attendeesET"
